--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -17,6 +17,7 @@
   --font-mono: Fira, monospace;
 
   --border-radius: 0.25rem;
+  --offset: 5rem;
   --measure: 60ch;
   --gutter: var(--space-s-m);
 
