--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -4,6 +4,7 @@
 @forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
+@forward "./nav-list";
 @forward "./menu";
 @forward "./site-header";
 @forward "./skip-link";
