--- a/src/assets/sass/blocks/_page-header.scss
+++ b/src/assets/sass/blocks/_page-header.scss
@@ -2,5 +2,5 @@
   --wrapper-max-width: 60rem;
   padding-inline: var(--gutter);
   padding-block-end: var(--space-m);
-  margin-block-start: var(--space-xl);
+  // margin-block-start: var(--space-xl);
 }
