--- a/src/includes/partials/aside.html
+++ b/src/includes/partials/aside.html
@@ -1,1 +1,3 @@
-<aside class="region | menu">{% include 'partials/menu.html' %}</aside>
+<aside class="region | menu">
+  <nav id="menu">{% include 'partials/docslist.html' %}</nav>
+</aside>
