--- a/src/includes/partials/help.html
+++ b/src/includes/partials/help.html
@@ -1,6 +1,3 @@
 <hr />
-<p>
-  Can't find what you need? Contact
-  <a href="mailto:example@exampl.com">support</a> for additional help.
-</p>
+<p>Can't find what you need? <a href="mailto:example@example.com">Contact us</a> for additional help.</p>
 <p><a href="#top">Back to the top</a>.</p>
