--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -2,22 +2,24 @@
 layout: base.html
 ---
 
-{% include 'partials/aside.html' %}
-<article id="article" class="region | content">
-  <header class="wrapper | flow | page-header">
-    {% if breadcrumbs %}
-    <ul class="breadcrumb" role="list">
-      {% for item in breadcrumbs %}
-      <li>{% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %} {{item.title }}{% endif %}</li>
-      {% endfor %}
-      <li><a href="{{ page.url }}">{{ title }}</a></li>
-    </ul>
-    {% endif %}
-    <h1>{{ title }}</h1>
-  </header>
-  <article class="wrapper | flow | prose">
-    {% if overview %}
-    <p>{{ overview }}</p>
-    {% endif %} {{ this.page | log }} {{ content }} {% include 'partials/help.html' %}
+<div class="main-layout">
+  {% include 'partials/aside.html' %}
+  <article class="region | content">
+    <header class="wrapper | flow | page-header">
+      {% if breadcrumbs %}
+      <ul class="breadcrumb" role="list">
+        {% for item in breadcrumbs %}
+        <li>{% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %} {{item.title }}{% endif %}</li>
+        {% endfor %}
+        <li><a href="{{ page.url }}">{{ title }}</a></li>
+      </ul>
+      {% endif %}
+      <h1>{{ title }}</h1>
+    </header>
+    <article class="wrapper | flow | prose">
+      {% if overview %}
+      <p>{{ overview }}</p>
+      {% endif %} {{ content }} {% include 'partials/help.html' %}
+    </article>
   </article>
-</article>
+</div>
