updated docs examples and removed main layout grid

--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -1,6 +1,6 @@
 :root {
   --color-dark: #000;
-  --color-light: #f3f3ed;
+  --color-light: #f9f8f5;
 
   --color-new: #8aff80;
   --color-new-secondary: #457f40;
