--- a/src/assets/sass/blocks/_prose.scss
+++ b/src/assets/sass/blocks/_prose.scss
@@ -9,6 +9,12 @@ p + p {
   --flow-space: var(--space-s-m);
 }
 
+.prose :is(nav + p) {
+  @media (min-width: 80rem) {
+    --flow-space: var(--space-s-m);
+  }
+}
+
 .prose .heading-anchor:is(:hover, :focus) {
   text-decoration: solid underline 0.1rem;
   text-underline-offset: 0.35rem;
