--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -8,6 +8,7 @@ body {
   background-color: var(--color-light);
   font-family: var(--font-base);
   font-size: var(--step-0);
+  overflow-y: scroll;
 }
 
 h1 {
@@ -150,6 +151,9 @@ footer {
 
 //todo: margin on home page
 .content {
+  @media (min-width: 60rem) {
+    margin-inline-start: 18rem;
+  }
   @media (min-width: 80rem) {
     margin-inline-end: 18rem;
   }
@@ -191,15 +195,10 @@ footer {
   }
 }
 
-.main-layout {
-  display: grid;
-  grid-template-columns: 18rem 1fr;
-  grid-template-rows: auto;
-  grid-template-areas: "menu content";
-}
-
 .menu {
-  grid-area: menu;
+  @media (max-width: 60rem) {
+    display: none;
+  }
   max-height: calc(100vh - var(--offset));
   overflow: auto;
   position: fixed;
@@ -207,8 +206,4 @@ footer {
   left: 0;
   bottom: 0;
   width: 18rem;
-}
-
-.content {
-  grid-area: content;
 }
