--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -9,16 +9,13 @@
   left: 0;
   right: 0;
   height: var(--offset);
-  nav {
-    display: flex;
-    align-items: center;
-    justify-items: center;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
-  display: flex;
-  flex-grow: 1;
   a {
     text-decoration: none;
   }
