--- a/src/includes/partials/navlist.html
+++ b/src/includes/partials/navlist.html
@@ -1,4 +1,4 @@
-<ul class="nav-list" role="list">
+<ul role="list">
   {% for item in navigation.docs.sections %}
   <li><a href="{{ item.url }}">{{ item.title }}</a></li>
   {% endfor %}
