--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -4,8 +4,8 @@
 @forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
+@forward "./navbar";
 @forward "./nav-list";
-@forward "./menu";
 @forward "./site-header";
 @forward "./skip-link";
 @forward "./table";
