--- a/src/assets/sass/blocks/_navbar.scss
+++ b/src/assets/sass/blocks/_navbar.scss
@@ -11,28 +11,28 @@
     background: var(--color-light);
     display: flex;
     gap: var(--space-s-l);
-    a {
-      text-decoration: none;
-      @media (hover: hover) {
-        &:hover {
-          color: var(--color-light);
-          background-color: var(--color-dark);
-          padding: 0.5rem;
-          margin: -0.5rem;
-          text-decoration: none;
-        }
-      }
-    }
-    [aria-current="page"] {
-      color: var(--color-light);
-      background-color: var(--color-dark);
-      padding: 0.5rem;
-      margin: -0.5rem;
-      text-decoration: none;
-    }
-    [aria-current="page"]:focus {
-      outline: double var(--color-dark) 0.5rem;
-    }
+    // a {
+    //   text-decoration: none;
+    //   @media (hover: hover) {
+    //     &:hover {
+    //       color: var(--color-light);
+    //       background-color: var(--color-dark);
+    //       padding: 0.5rem;
+    //       margin: -0.5rem;
+    //       text-decoration: none;
+    //     }
+    //   }
+    // }
+    // [aria-current="page"] {
+    //   color: var(--color-light);
+    //   background-color: var(--color-dark);
+    //   padding: 0.5rem;
+    //   margin: -0.5rem;
+    //   text-decoration: none;
+    // }
+    // [aria-current="page"]:focus {
+    //   outline: double var(--color-dark) 0.5rem;
+    // }
   }
 
   // Set variables/desktop state
