--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,9 +1,19 @@
 <a href="#article" class="skip-link">Skip to content</a>
 <a href="#menu" class="skip-link">Skip to menu</a>
 
-<header class="region | site-header">
-  <nav aria-label="primary">
-    <div class="logo"><a href="/">{{ metadata.title }}</a></div>
-    {% include 'partials/navlist.html' %}
-  </nav>
+<header class="region | site-header | ontop">
+  <div class="logo"><a href="/">{{ metadata.title }}</a></div>
+  <nav id="mainnav" class="navbar" aria-label="primary">{% include 'partials/navlist.html' %}</nav>
+  <template id="burger-template">
+    <button type="button" aria-expanded="false" aria-label="Menu" aria-controls="mainnav">
+      <span>Menu</span>
+      <svg width="24" height="24" aria-hidden="true">
+        <path
+          fill-rule="evenodd"
+          d="M12 3.75a.75.75 0 01.75.75v6.75h6.75a.75.75 0 010 1.5h-6.75v6.75a.75.75 0 01-1.5 0v-6.75H4.5a.75.75 0 010-1.5h6.75V4.5a.75.75 0 01.75-.75z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </button>
+  </template>
 </header>
