--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -1,11 +1,15 @@
 @forward "./breadcrumb";
 @forward "./callout";
 @forward "./code";
+@forward "./content";
+@forward "./docs-box";
 @forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
 @forward "./navbar";
 @forward "./nav-list";
+@forward "./sidebar";
 @forward "./site-header";
 @forward "./skip-link";
 @forward "./table";
+@forward "./table-of-contents";
