--- a/src/assets/sass/blocks/_prose.scss
+++ b/src/assets/sass/blocks/_prose.scss
@@ -1,6 +1,6 @@
 .prose {
-  --flow-space: var(--space-l-xl);
   --wrapper-max-width: 60rem;
+  --flow-space: var(--space-l-xl);
   padding-inline: var(--gutter);
 }
 
@@ -9,11 +9,11 @@ p + p {
   --flow-space: var(--space-s-m);
 }
 
-.prose :is(nav + p) {
-  @media (min-width: 80rem) {
-    --flow-space: var(--space-s-m);
-  }
-}
+// .prose :is(nav + p) {
+//   @media (min-width: 80rem) {
+//     --flow-space: var(--space-s-m);
+//   }
+// }
 
 .prose .heading-anchor:is(:hover, :focus) {
   text-decoration: solid underline 0.1rem;
