--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,5 +1,5 @@
 <a href="#article" class="skip-link">Skip to content</a>
-<a href="#menu" class="skip-link">Skip to menu</a>
+<a href="#sidebar" class="skip-link">Skip to sidebar menu</a>
 
 <header class="region | site-header | ontop">
   <div class="logo"><a href="/">{{ metadata.title }}</a></div>
