--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -2,14 +2,14 @@
 layout: base.html
 ---
 
-{% include 'partials/aside.html' %}
+<aside id="sidebar" class="region | sidebar">{% include 'partials/docslist.html' %}</aside>
 <article id="article" class="region | content">
   <header class="wrapper | flow | page-header"><h1>{{ title }}</h1></header>
   <article class="wrapper | flow | prose">
     {{ content }}
-    <div class="grid">
+    <div class="grid | docs-box">
       {% for item in navigation.docs.sections %}
-      <ul class="docs-box">
+      <ul>
         <li>
           <h2><a href="{{ item.url }}">{{ item.title }}</a></h2>
           <ul role="list">
