--- a/src/assets/sass/_reset.scss
+++ b/src/assets/sass/_reset.scss
@@ -24,10 +24,10 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-// ul[role='list'],
-// ol[role='list'] {
-//   list-style: none;
-// }
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
 
 /* Prevent zooming when orientation changes on some iOS devices */
 html {
