--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -6,8 +6,8 @@
 body {
   color: var(--color-dark);
   background-color: var(--color-light);
-  font-family: var(--font-base);
   font-size: var(--step-0);
+  font-family: var(--font-base);
   overflow-y: scroll;
 }
 
@@ -83,9 +83,10 @@ img {
 }
 
 footer {
-  text-align: center;
+  position: relative;
   --region-space-top: var(--space-m);
   --region-space-bottom: var(--space-m);
   padding-inline: var(--gutter);
-  position: relative;
+  background-color: var(--color-light-secondary);
+  text-align: center;
 }
