--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -3,6 +3,7 @@
 @forward "./code";
 @forward "./content";
 @forward "./docs-box";
+@forward "./docs-list";
 @forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
