--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -3,7 +3,7 @@
 
 <header class="region | site-header | ontop">
   <div class="logo"><a href="/">{{ metadata.title }}</a></div>
-  <nav id="mainnav" class="navbar" aria-label="primary">{% include 'partials/navlist.html' %}</nav>
+  <nav id="mainnav" class="navbar | docs-list" aria-label="primary">{% include 'partials/navlist.html' %}</nav>
   <template id="burger-template">
     <button type="button" aria-expanded="false" aria-label="Menu" aria-controls="mainnav">
       <span>Menu</span>
