--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -2,19 +2,19 @@
 layout: base.html
 ---
 
-<aside id="sidebar" class="region | sidebar">{% include 'partials/docslist.html' %}</aside>
+{% include 'partials/sidebar.html' %}
 <article id="article" class="region | content">
   <header class="wrapper | flow | page-header"><h1>{{ title }}</h1></header>
   <article class="wrapper | flow | prose">
     {{ content }}
     <div class="grid | docs-box">
-      {% for item in navigation.docs.sections %}
+      {% for section in navigation.docs.sections %}
       <ul role="list">
         <li>
-          <h2><a href="{{ item.url }}">{{ item.title }}</a></h2>
+          <h2><a href="{{ section.url }}">{{ section.title }}</a></h2>
           <ul role="list">
-            {% for item in item.articles %}
-            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+            {% for article in section.articles %}
+            <li><a href="{{ article.url }}">{{ article.title }}</a></li>
             {% endfor %}
           </ul>
         </li>
