--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -2,7 +2,7 @@
 layout: base.html
 ---
 
-<aside id="sidebar" class="region | sidebar">{% include 'partials/docslist.html' %}</aside>
+{% include 'partials/sidebar.html' %}
 <article class="region | content">
   <header class="wrapper | flow | page-header">
     {% if breadcrumbs %}
