--- a/src/includes/partials/footer.html
+++ b/src/includes/partials/footer.html
@@ -1,3 +1,32 @@
 <footer class="region">
-  <p>&copy; {{ '' | getFullYear }}</p>
+  <div class="wrapper | prose | grid | docs-box">
+    <ul role="list">
+      <li>
+        <h2>Docs</h2>
+        <ul role="list">
+          {% for section in navigation.docs.sections %}
+          <li><a href="{{ section.url }}">{{ section.title}} </a></li>
+          {% endfor %}
+        </ul>
+      </li>
+    </ul>
+    <ul role="list">
+      <li>
+        <h2>More</h2>
+        <ul role="list">
+          <li><a href="https://duckduckgo.com/">API Reference</a></li>
+          <li><a href="https://elevensoftware.com/">Eleven Software</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul role="list">
+      <li>
+        <h2>Resources</h2>
+        <ul role="list">
+          <li><a href="mailto:example@example.com">Contact us</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <div class="region">&copy; {{ '' | getFullYear }}</div>
 </footer>
