--- a/src/assets/sass/blocks/_heading-anchor.scss
+++ b/src/assets/sass/blocks/_heading-anchor.scss
@@ -1,3 +1,12 @@
+.heading-anchor {
+  text-decoration: none;
+}
+
+.heading-anchor:is(:hover, :focus) {
+  text-decoration: solid underline 0.1rem;
+  text-underline-offset: 0.35rem;
+}
+
 .heading-anchor:is(:hover, :focus):after {
   display: inline-block;
   width: 1em;
