--- a/src/assets/sass/blocks/_navbar.scss
+++ b/src/assets/sass/blocks/_navbar.scss
@@ -6,7 +6,7 @@
 
 .navbar {
   ul {
-    background: var(--color-light);
+    background: var(--color-tertiary);
     display: flex;
     gap: var(--space-s);
   }
