--- a/src/assets/sass/blocks/_table.scss
+++ b/src/assets/sass/blocks/_table.scss
@@ -15,6 +15,6 @@ table {
     background-color: var(--color-light-secondary);
   }
   tr:hover {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-glare);
   }
 }
