--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -92,3 +92,22 @@ footer {
     text-align: center;
   }
 }
+
+mark::before,
+mark::after {
+  clip-path: inset(100%);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+mark::before {
+  content: " [highlight start] ";
+}
+
+mark::after {
+  content: " [highlight end] ";
+}
