--- a/src/assets/sass/blocks/_sidebar.scss
+++ b/src/assets/sass/blocks/_sidebar.scss
@@ -10,6 +10,6 @@
   width: 18rem;
   padding-inline: var(--gutter);
   background-color: var(--color-light);
-  font-size: var(--step--1);
+  // font-size: var(--step--1);
   overflow: auto;
 }
