--- a/src/includes/partials/navlist.html
+++ b/src/includes/partials/navlist.html
@@ -2,5 +2,5 @@
   {% include 'partials/docslist.html' %}
   <li><a href="https://duckduckgo.com/">API Reference</a></li>
   <li><a href="mailto:example@example.com">Need help?</a></li>
-  <li><button type="button">Search Button</button></li>
+  <li>{% search %}</li>
 </ul>
