added a form prototype

--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -4,6 +4,7 @@
 @forward "./content";
 @forward "./docs-box";
 @forward "./docs-list";
+@forward "./form";
 @forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
