--- a/src/includes/partials/footer.html
+++ b/src/includes/partials/footer.html
@@ -14,8 +14,8 @@
       <li>
         <h2>Resources</h2>
         <ul role="list">
-          <li><a href="https://duckduckgo.com/">API Reference</a></li>
-          <li><a href="mailto:example@example.com">Contact us</a></li>
+          <li><a href="/">API Reference</a></li>
+          <li><a href="/">Contact us</a></li>
         </ul>
       </li>
     </ul>
