--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,4 +1,4 @@
-<a href="#article" class="skip-link">Skip to content</a>
+<a href="#content" class="skip-link">Skip to content</a>
 <a href="#sidebar" class="skip-link">Skip to sidebar menu</a>
 
 <header class="region | site-header | ontop">
