--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -10,7 +10,7 @@
   --color-dark: #000;
   --color-light: #f9f8f5;
   --color-light-secondary: #efede5;
-  --color-tertiary: #f3f1ec;
+  --color-tertiary: #f3f1ea;
   --color-glare: #ffff00;
 
   --color-new: #8aff80;
