--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -3,7 +3,7 @@ layout: base.html
 ---
 
 {% include 'partials/sidebar.html' %}
-<article id="article" class="region | content">
+<article id="content" class="region | content">
   <header class="wrapper | flow | page-header"><h1>{{ title }}</h1></header>
   <article class="wrapper | flow | prose">
     {{ content }}
