--- a/src/assets/sass/blocks/_form.scss
+++ b/src/assets/sass/blocks/_form.scss
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-xs);
+  --flow-space: 0;
   margin-block-start: 0;
+
+  h2 {
+    font-size: var(--step-1);
+  }
 
   label:not(fieldset > label),
   input[value="Submit"] {
