--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -9,9 +9,9 @@
 
   --color-dark: #000;
   --color-light: #f9f8f5;
-  --color-light-secondary: #efede5;
-  --color-tertiary: #f3f1ea;
-  --color-glare: #ffff00;
+  --color-light-variant: #efede5;
+  --color-highlight: #ffe34c;
+  --color-primary: #1e90ff;
 
   --color-new: #8aff80;
   --color-new-secondary: #457f40;
