--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -12,7 +12,7 @@
   --region-space-top: var(--space-s);
   --region-space-bottom: var(--space-s);
   padding-inline: var(--gutter);
-  background-color: var(--color-tertiary);
+  background-color: var(--color-light-variant);
 }
 
 .logo {
