--- a/src/assets/sass/blocks/_docs-list.scss
+++ b/src/assets/sass/blocks/_docs-list.scss
@@ -35,7 +35,7 @@
         display: block;
         border-inline-start: solid var(--border-thin);
         color: var(--color-dark);
-        background-color: var(--color-glare);
+        background-color: var(--color-highlight);
         text-decoration: none;
       }
     }
