--- a/src/assets/sass/blocks/_form.scss
+++ b/src/assets/sass/blocks/_form.scss
@@ -1,4 +1,7 @@
 .contact {
+  @media (min-width: 60rem) {
+    width: 75%;
+  }
   display: flex;
   flex-direction: column;
   gap: var(--space-xs);
@@ -19,13 +22,10 @@
   }
 
   input[type="text"],
-  input[type="email"] {
-    width: 20rem;
-  }
-
+  input[type="email"],
   fieldset,
   textarea {
-    width: var(--measure);
+    width: 100%;
   }
 
   textarea {
