--- a/src/assets/sass/blocks/_table.scss
+++ b/src/assets/sass/blocks/_table.scss
@@ -8,13 +8,13 @@ table {
     border: var(--border-thin) solid var(--color-dark);
   }
   th {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-highlight);
     text-align: left;
   }
   tr:nth-child(even) {
-    background-color: var(--color-light-secondary);
+    background-color: var(--color-light-variant);
   }
   tr:hover {
-    background-color: var(--color-glare);
+    background-color: var(--color-highlight);
   }
 }
