--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -87,7 +87,7 @@ footer {
   --region-space-top: var(--space-xl);
   --region-space-bottom: var(--space-xl);
   padding-inline: var(--gutter);
-  background-color: var(--color-light-secondary);
+  background-color: var(--color-light-variant);
   div:last-of-type {
     text-align: center;
   }
