--- a/src/includes/partials/navlist.html
+++ b/src/includes/partials/navlist.html
@@ -1,6 +1,9 @@
+{% assign currentPage = page.url %}
+
 <ul role="list">
-  {% include 'partials/docslist.html' %} {% for pages in navigation.pages %}
-  <li><a href="{{ pages.url }}">{{ pages.title }}</a></li>
+  {% include 'partials/docslist.html' %} 
+  {% for page in navigation.pages %}
+  <li><a href="{{ page.url }}" {% if currentPage == page.url %}aria-current="page"{% endif %}>{{ page.title }}</a></li>
   {% endfor %}
   <li>{% search %}</li>
 </ul>
