adjusted tabbing to content

--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -9,9 +9,10 @@
 
   --color-dark: #000;
   --color-light: #f9f8f5;
-  --color-light-variant: #efede5;
+  --color-light-variant: #dcdbd5;
   --color-highlight: #ffe34c;
-  --color-primary: #1e90ff;
+  --color-primary: #7cb2b3;
+  --color-secondary: #f26337;
 
   --color-new: #8aff80;
   --color-new-secondary: #457f40;
