--- a/src/assets/sass/blocks/_content.scss
+++ b/src/assets/sass/blocks/_content.scss
@@ -1,4 +1,6 @@
 .content {
+  // Maintain focus at top of page when tabbing
+  scroll-margin-block-start: 10rem;
   @media (min-width: 60rem) {
     margin-inline-start: 18rem;
   }
