--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,8 +1,8 @@
 <a href="#content" class="skip-link">Skip to content</a>
-<a href="#sidebar" class="skip-link">Skip to sidebar menu</a>
+<a href="#sidebar" class="skip-link">Skip to docs menu</a>
 
 <header class="region | site-header | ontop">
-  <div class="logo"><a href="/">{{ metadata.title }}</a></div>
+  <div class="logo"><a href="/" tabindex="-1">{{ metadata.title }}</a></div>
   <nav id="mainnav" class="navbar | docs-list" aria-label="primary">{% include 'partials/navlist.html' %}</nav>
   <template id="burger-template">
     <button
