--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -3,7 +3,7 @@ layout: base.html
 ---
 
 {% include 'partials/sidebar.html' %}
-<article class="region | content">
+<article id="content" class="region | content">
   <header class="wrapper | flow | page-header">
     {% if breadcrumbs %}
     <ul class="breadcrumb" role="list">
