--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -9,7 +9,7 @@
 
   --color-dark: #000;
   --color-light: #f9f8f5;
-  --color-light-variant: #dcdbd5;
+  --color-light-variant: #ecebe5;
   --color-highlight: #ffe34c;
   --color-primary: #7cb2b3;
   --color-secondary: #f26337;
