--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -25,6 +25,8 @@
       type="font/woff"
       crossorigin
     />
+    <link rel="preload" href="{{ '/assets/fonts/FiraMono-medium.ttf' | url }}" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="{{ '/assets/fonts/FiraMono-regular.ttf' | url }}" as="font" type="font/ttf" crossorigin />
     <script type="module" src="{{ '/assets/scripts/app.js' }}" defer></script>
   </head>
   <body id="top">
