--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -9,19 +9,25 @@
 
   --color-dark: #000;
   --color-light: #f9f8f5;
-  --color-light-variant: #ecebe5;
-  --color-highlight: #ffe34c;
-  --color-primary: #7cb2b3;
-  --color-secondary: #f26337;
 
-  --color-new: #8aff80;
-  --color-new-secondary: #457f40;
-  --color-note: #ffff80;
-  --color-note-secondary: #99994c;
-  --color-warning: #ff9580;
-  --color-warning-secondary: #7f4a40;
-  --color-important: #80ffea;
-  --color-important-secondary: #407f75;
+  --color-grey-light: #dfdce3;
+  --color-grey-med: #6e7b8e;
+  --color-grey-dark: #1f3a42;
+  --color-blue-light: #8acfd6;
+  --color-blue-medium: #71a7bd;
+  --color-blue-dark: #48708d;
+  --color-gold: #ffc107;
+  --color-orange: #f7882f;
+  --color-red: #fe491a;
+
+  --color-callout-green: #8aff80;
+  --color-callout-green-secondary: #457f40;
+  --color-callout-yellow: #ffff80;
+  --color-callout-yellow-secondary: #99994c;
+  --color-callout-red: #ff9580;
+  --color-callout-red-secondary: #7f4a40;
+  --color-callout-cyan: #80ffea;
+  --color-callout-cyan-secondary: #407f75;
 
   --font-display: AlteHaas, Helvetica, Arial, sans-serif;
   --font-base: Authentic, Helvetica, Arial, sans-serif;
