--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -94,7 +94,7 @@ footer {
   --region-space-top: var(--space-xl);
   --region-space-bottom: var(--space-xl);
   padding-inline: var(--gutter);
-  background-color: var(--color-light-variant);
+  background-color: var(--color-grey-light);
   div:last-of-type {
     text-align: center;
   }
